package grpc

import (
	"context"

	pgrepo "github.com/ariefitriadin/simplicom/cmd/warehouse-service/internal/persistence/postgres/repositories"

	"github.com/jackc/pgx/v5/pgxpool"

	proto "github.com/ariefitriadin/simplicom/cmd/warehouse-service/proto"
	apperrors "github.com/ariefitriadin/simplicom/pkg/errors"
)

type WarehouseServer struct {
	queries                                   *pgrepo.Queries
	db                                        *pgxpool.Pool
	proto.UnimplementedWarehouseServiceServer // Embed the unimplemented server
}

func NewServer(queries *pgrepo.Queries, db *pgxpool.Pool) proto.WarehouseServiceServer {
	return &WarehouseServer{queries: queries, db: db}
}

func (s *WarehouseServer) CreateWarehouse(ctx context.Context, req *proto.CreateWarehouseRequest) (*proto.Warehouse, error) {
	// Implement warehouse creation logic
	return nil, apperrors.New("method CreateWarehouse not implemented")
}

func (s *WarehouseServer) GetWarehouse(ctx context.Context, req *proto.GetWarehouseRequest) (*proto.Warehouse, error) {
	// Implement get warehouse logic
	return nil, apperrors.New("method GetWarehouse not implemented")
}

func (s *WarehouseServer) ListWarehouses(ctx context.Context, req *proto.ListWarehousesRequest) (*proto.ListWarehousesResponse, error) {
	// Implement list warehouses logic
	return nil, apperrors.New("method ListWarehouses not implemented")
}

func (s *WarehouseServer) UpdateWarehouse(ctx context.Context, req *proto.UpdateWarehouseRequest) (*proto.Warehouse, error) {
	// Implement update warehouse logic
	return nil, apperrors.New("method UpdateWarehouse not implemented")
}

func (s *WarehouseServer) DeleteWarehouse(ctx context.Context, req *proto.DeleteWarehouseRequest) (*proto.DeleteWarehouseResponse, error) {
	// Implement delete warehouse logic
	return nil, apperrors.New("method DeleteWarehouse not implemented")
}

func (s *WarehouseServer) AddStock(ctx context.Context, req *proto.AddStockRequest) (*proto.StockResponse, error) {
	// Implement add stock logic
	return nil, apperrors.New("method AddStock not implemented")
}

func (s *WarehouseServer) GetStock(ctx context.Context, req *proto.GetStockRequest) (*proto.StockResponse, error) {
	// Implement get stock logic
	return nil, apperrors.New("method GetStock not implemented")
}

func (s *WarehouseServer) ReserveStock(ctx context.Context, req *proto.ReserveStockRequest) (*proto.ReservationResponse, error) {
	// Implement reserve stock logic
	return nil, apperrors.New("method ReserveStock not implemented")
}

func (s *WarehouseServer) ConfirmReservation(ctx context.Context, req *proto.ConfirmReservationRequest) (*proto.ConfirmationResponse, error) {
	// Implement confirm reservation logic
	return nil, apperrors.New("method ConfirmReservation not implemented")
}

func (s *WarehouseServer) CancelReservation(ctx context.Context, req *proto.CancelReservationRequest) (*proto.CancellationResponse, error) {
	// Implement cancel reservation logic
	return nil, apperrors.New("method CancelReservation not implemented")
}

func (s *WarehouseServer) GetStockHistory(ctx context.Context, req *proto.GetStockHistoryRequest) (*proto.StockHistoryResponse, error) {
	// Implement get stock history logic
	return nil, apperrors.New("method GetStockHistory not implemented")
}
